Hide invisible custom fields correctly

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -466,7 +466,7 @@ input.required, select.required, span.required_explanation {
 }
 
 form#Create th {
-    text-align: right;
+    text-align: left;
 }
 
 form#Create .comment {
